# aoc2023p03

./: Cargo.toml  README.md
data/: dtx32s001.txt  dtx64s001.txt
src/: app.rs  genx.rs  lib.rs
