[package]
name = "l003"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gmp-mpfr-sys = "1.6"
rug = "1.24.0"

[lib]
name = "l003"
path = "src/lib.rs"

[[bin]]
name = "genx"
path = "src/genx.rs"

[[bin]]
name = "app"
path = "src/app.rs"

[profile.release]
debug = 1
